// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FuelSavingsForm /> should display save button when saveCompleted is true 1`] = `
<div>
  <h2>
    Fuel Savings Analysis
  </h2>
  <table>
    <tbody>
      <tr>
        <td>
          <label
            htmlFor="newMpg"
          >
            New Vehicle MPG
          </label>
        </td>
        <td>
          <input
            className="small"
            id="newMpg"
            name="newMpg"
            onChange={[MockFunction]}
            type="text"
            value={20}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="tradeMpg"
          >
            Trade-in MPG
          </label>
        </td>
        <td>
          <input
            className="small"
            id="tradeMpg"
            name="tradeMpg"
            onChange={[MockFunction]}
            type="text"
            value={20}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="newPpg"
          >
            New Vehicle price per gallon
          </label>
        </td>
        <td>
          <input
            className="small"
            id="newPpg"
            name="newPpg"
            onChange={[MockFunction]}
            type="text"
            value={1.5}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="tradePpg"
          >
            Trade-in price per gallon
          </label>
        </td>
        <td>
          <input
            className="small"
            id="tradePpg"
            name="tradePpg"
            onChange={[MockFunction]}
            type="text"
            value={1.5}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="milesDriven"
          >
            Miles Driven
          </label>
        </td>
        <td>
          <input
            className="small"
            id="milesDriven"
            name="milesDriven"
            onChange={[MockFunction]}
            type="text"
            value={100}
          />
          miles per
          <select
            id="milesDrivenTimeframe"
            name="milesDrivenTimeframe"
            onChange={[MockFunction]}
            value="week"
          >
            <option
              value="week"
            >
              Week
            </option>
            <option
              value="month"
            >
              Month
            </option>
            <option
              value="year"
            >
              Year
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          <label>
            Date Modified
          </label>
        </td>
        <td />
      </tr>
    </tbody>
  </table>
  <hr />
  <div>
    <table
      id="fuelSavingsResults"
    >
      <tbody>
        <tr>
          <td
            className="fuel-savings-label"
          >
            Loss
          </td>
          <td>
            <table>
              <tbody>
                <tr>
                  <td>
                    Monthly
                  </td>
                  <td>
                    1 Year
                  </td>
                  <td>
                    3 Year
                  </td>
                </tr>
                <tr>
                  <td
                    className="loss"
                  >
                    0
                  </td>
                  <td
                    className="loss"
                  >
                    0
                  </td>
                  <td
                    className="loss"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <input
      id="save"
      onClick={[MockFunction]}
      type="submit"
      value="Save"
    />
  </div>
  <div
    id="saveCompleted"
  >
    Saved! 
    <span
      aria-label="Party"
      role="img"
    >
      🎉
    </span>
  </div>
</div>
`;

exports[`<FuelSavingsForm /> should hide save button when saveCompleted is false 1`] = `
<div>
  <h2>
    Fuel Savings Analysis
  </h2>
  <table>
    <tbody>
      <tr>
        <td>
          <label
            htmlFor="newMpg"
          >
            New Vehicle MPG
          </label>
        </td>
        <td>
          <input
            className="small"
            id="newMpg"
            name="newMpg"
            onChange={[MockFunction]}
            type="text"
            value={20}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="tradeMpg"
          >
            Trade-in MPG
          </label>
        </td>
        <td>
          <input
            className="small"
            id="tradeMpg"
            name="tradeMpg"
            onChange={[MockFunction]}
            type="text"
            value={20}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="newPpg"
          >
            New Vehicle price per gallon
          </label>
        </td>
        <td>
          <input
            className="small"
            id="newPpg"
            name="newPpg"
            onChange={[MockFunction]}
            type="text"
            value={1.5}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="tradePpg"
          >
            Trade-in price per gallon
          </label>
        </td>
        <td>
          <input
            className="small"
            id="tradePpg"
            name="tradePpg"
            onChange={[MockFunction]}
            type="text"
            value={1.5}
          />
        </td>
      </tr>
      <tr>
        <td>
          <label
            htmlFor="milesDriven"
          >
            Miles Driven
          </label>
        </td>
        <td>
          <input
            className="small"
            id="milesDriven"
            name="milesDriven"
            onChange={[MockFunction]}
            type="text"
            value={100}
          />
          miles per
          <select
            id="milesDrivenTimeframe"
            name="milesDrivenTimeframe"
            onChange={[MockFunction]}
            value="week"
          >
            <option
              value="week"
            >
              Week
            </option>
            <option
              value="month"
            >
              Month
            </option>
            <option
              value="year"
            >
              Year
            </option>
          </select>
        </td>
      </tr>
      <tr>
        <td>
          <label>
            Date Modified
          </label>
        </td>
        <td />
      </tr>
    </tbody>
  </table>
  <hr />
  <div>
    <table
      id="fuelSavingsResults"
    >
      <tbody>
        <tr>
          <td
            className="fuel-savings-label"
          >
            Loss
          </td>
          <td>
            <table>
              <tbody>
                <tr>
                  <td>
                    Monthly
                  </td>
                  <td>
                    1 Year
                  </td>
                  <td>
                    3 Year
                  </td>
                </tr>
                <tr>
                  <td
                    className="loss"
                  >
                    0
                  </td>
                  <td
                    className="loss"
                  >
                    0
                  </td>
                  <td
                    className="loss"
                  >
                    0
                  </td>
                </tr>
              </tbody>
            </table>
          </td>
        </tr>
      </tbody>
    </table>
    <input
      id="save"
      onClick={[MockFunction]}
      type="submit"
      value="Save"
    />
  </div>
</div>
`;
